--- a/exercicios/ex027-flexbox/flex012_flex/index.html
+++ b/exercicios/ex027-flexbox/flex012_flex/index.html
@@ -14,28 +14,22 @@
             background-color: lightblue;
             text-align: center;
             border: 1px solid black;
-            
+            flex-basis: 200px;
         }
 
         div#cxA {
-            /*flex-grow: 0;
             flex-shrink: 1;
-            flex-basis: 200px;*/
-            flex: 0 1 200px;
+            flex-grow: 0;
         }
 
         div#cxB {
-            /*flex-grow: 2;
             flex-shrink: 1;
-            flex-basis: 200px;*/
-            flex: 2 1 200px;
+            flex-grow: 2;
         }
 
         div#cxC {
-            /*flex-grow: 8;
             flex-shrink: 1;
-            flex-basis: 200px;*/
-            flex: 8 1 200px
+            flex-grow: 4;
         }
 
     </style>
